[package]
name = "utm"
version = "0.1.5"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Convert latitudes and longitudes to UTM coordinates and vice versa"
license = "MIT"
homepage = "https://github.com/gadomski/utm"
repository = "https://github.com/gadomski/utm"
documentation = "http://gadomski.github.io/utm"
keywords = ["utm", "gis", "no_std"]

[dependencies]
num = {version = "0.4.0", optional = true, default-features = false, features = ["libm"]}

[features]
no_std = ["num"]
